# youbot_catkin_ws_src

./: readme.txt
ar_track_alvar_msgs/: CMakeLists.txt  CMakeLists.txt~
ar_track_alvar_msgs/cmake/: ar_track_alvar_msgsConfig.cmake
industry_comm/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
industry_comm/action/: IndustryCommGoal.action
industry_comm/cfg/: robotname.cfg  robotname.cfg~  robotparam.cfg~
industry_comm/docs/: robotnameConfig-usage.dox  robotnameConfig.dox  robotnameConfig.wikidoc  robotparamConfig-usage.dox  robotparamConfig.dox  robotparamConfig.wikidoc
industry_comm/launch/: comm.launch  comm.launch~  comm_techday.launch
industry_comm/msg/: task.msg~
industry_comm/params/: robot_name_params.yaml  robot_name_params.yaml~  robot_params.yaml  robot_params.yaml~
industry_comm/src/: MarkerData_1_2_3_4_5_6.xml  localsys.cpp  taskmanager.cpp  taskmanager_techday.cpp  taskprocessor.cpp  taskprocessor.cpp~  taskprocessor_abb.cpp  taskprocessor_techday.cpp  taskpublisher.cpp
industry_comm_msg/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
industry_comm_msg/msg/: ack.msg  ack.msg~  feedback.msg  feedback.msg~  task.msg~
industry_comm_msg/srv/: TaskProcessor.srv~  TaskPublisher.srv  TaskPublisher.srv~
youbot_arm_server/: CMakeLists.txt  CMakeLists.txt~  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml  package.xml~
youbot_arm_server/action/: YouBotGoal.action  YouBotGoal.action~
youbot_arm_server/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  youbot_arm_server-msg-extras.cmake.develspace.in
youbot_arm_server/cmake/: youbot_arm_server-genmsg-context.py  youbot_arm_server-genmsg.cmake
youbot_controller/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  start_system.launch~
youbot_controller/launch/: start_system.launch  sync.launch
(+25 files in other folders)
