<?xml version="1.0"?>
<package>
  <name>youbot_controller</name>
  <version>0.0.0</version>
  <description>The youbot_controller package</description>

 
  <maintainer email="youbot@todo.todo">youbot</maintainer>


 
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>move_base</build_depend>
  <build_depend>youbot_driver_ros_interface</build_depend>
  <build_depend>youbot_tf_setup</build_depend>
  <run_depend>move_base</run_depend>
  <run_depend>youbot_driver_ros_interface</run_depend>
  <run_depend>youbot_tf_setup</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
